# zed-os

./: .buckconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix  make_disk.sh  output.txt  reindeer.toml
.cargo/: config.toml
.github/workflows/: ci.yml
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: boot.s  elf.rs  heap.rs  ipc.rs  macho.rs  main.rs  mmu.rs  process.rs  scheduler.rs  switch.s  tarfs.rs  uart.rs  vectors.s  vfs.rs  virtio.rs
libs/ipsw-downloader/: Cargo.toml
libs/ipsw-downloader/src/: lib.rs
libs/vfdecrypt/: Cargo.toml
libs/vfdecrypt/src/: lib.rs
src/kernel/: Cargo.toml  package.nix
src/kernel/src/: binary_loader.rs  block.rs  boot.s  heap.rs  hfsfs.rs  ipc.rs  macho.rs  main.rs  mmu.rs  process.rs  scheduler.rs  switch.s  vectors.s  vfs.rs  virtio.rs  zalloc.rs
src/lib/apple-dmg/: BUCK  Cargo.toml  blkx.rs  koly.rs  lib.rs  mbr.rs  xml.rs
src/lib/dyld/: Cargo.toml
src/lib/dyld/src/: cache.rs  macho.rs  main.rs
src/lib/hfsplus/: BUCK  Cargo.toml  hfs_strings.rs  internal.rs  lib.rs
src/lib/ipsw-downloader/: Cargo.toml
src/lib/ipsw-downloader/src/: lib.rs
src/lib/loader/: Cargo.toml
src/lib/loader/src/: elf.rs  lib.rs  macho.rs
src/lib/vfdecrypt/: BUCK  Cargo.toml  lib.rs
src/lib/vfdecrypt/src/: lib.rs
src/setup/: BUCK  rules.bzl
src/tools/devicetree/: Cargo.toml
src/tools/devicetree/src/: main.rs
src/tools/emulator/: Cargo.toml  README.md
src/tools/emulator/src/: cpu.rs  decoder.rs  hardware.rs  img3.rs  img4.rs  jit.rs  main.rs
src/tools/gravity-setup/: Cargo.toml
src/tools/gravity-setup/src/: main.rs
src/tools/ipsw/: Cargo.toml  main.rs
src/tools/linker-wrapper/: main.rs
src/tools/make-disk/: BUCK
src/tools/make-disk/src/: main.rs
src/tools/setup/: Cargo.toml
src/tools/setup/src/: main.rs
toolchains/: BUCK  tools.bzl
tools/installer/: Cargo.toml
tools/installer/src/: main.rs
tools/ipsw/: Cargo.toml  main.rs
tools/make-disk/: Cargo.toml
tools/make-disk/src/: main.rs
tools/vfdecrypt/: Cargo.toml
tools/vfdecrypt/src/: main.rs
user/: linker.ld
user/src/: main.rs
