[workspace]
resolver = "3"
members = [
    "libs/ipsw-downloader",
    "tools/vfdecrypt",
    "tools/installer",
    "kernel",
]

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.ipsw-downloader]
opt-level = 1

[profile.dev.package.vfdecrypt-rs]
opt-level = 1

[profile.dev.package.zedos-installer]
opt-level = 1

[workspace.dependencies]
thiserror = { version = "2.0.18", default-features = false }
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "stream"] }
goblin = { version = "0.10.4", default-features = false, features = [
    "elf64",
    "endian_fd",
    "alloc",
    "elf32",
    "mach32",
    "mach64",
] }
linked_list_allocator = "0.10.5"
spin = "0.10.0"
plist = "1.8.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
tokio = { version = "1.49.0", default-features = false }

gpui = { git = "https://github.com/zed-industries/zed", version = "0.2.2", default-features = false }
gpui-component = { git = "https://github.com/longbridge/gpui-component", version = "0.5.0" }
