[workspace]
resolver = "3"
members = [
    "libs/*",
    "tools/ipsw",
    "tools/make-disk",
    "kernel",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
thiserror = { version = "2.0.18", default-features = false }
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "stream"] }
goblin = { version = "0.10.4", default-features = false, features = [
    "elf64",
    "endian_fd",
    "alloc",
    "elf32",
    "mach32",
    "mach64",
] }
linked_list_allocator = "0.10.5"
spin = "0.10.0"
plist = "1.8.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
tokio = { version = "1.49.0", default-features = false }
clap = { version = "4.5.54", features = ["derive"] }
aes = "0.8.4"
hmac = "0.12.1"
sha1 = "0.10.6"
pbkdf2 = "0.12.2"
des = "0.8.1"
cbc = { version = "0.1.2", features = ["alloc"] }
cipher = { version = "0.4.4", features = ["block-padding"] }
indicatif = "0.18.3"
tar = "0.4.43"

