[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
goblin = { workspace = true }
linked_list_allocator = { workspace = true }
spin = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
hfsplus = { path = "../lib/hfsplus" }
zstd-safe = { workspace = true }
