[package]
name = "zedos-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", version = "0.2.2", default-features = false }
gpui-component = { git = "https://github.com/longbridge/gpui-component", version = "0.5.0" }
windows-sys = { version = "0.61.2", features = ["Win32_UI_Controls"] }

[build-dependencies]
embed-resource = "3.0.6"
