[package]
name = "ipsw-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ipsw"
path = "main.rs"

[dependencies]
reqwest = { workspace = true }
plist = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
vfdecrypt = { path = "../../libs/vfdecrypt" }
ipsw-downloader = { path = "../../libs/ipsw-downloader" }
indicatif = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
