[package]
name = "ipsw-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
plist = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
rootcause = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
