[package]
name = "emulator"
edition = "2024"
version.workspace = true

[dependencies]
cranelift = { version = "0.128.3", features = ["jit", "module", "native"] }
rasn = "0.28.7"
derive_more = { workspace = true }
rootcause = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
hex = { workspace = true }
